[package]
name = "asuskb"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/s0me0neee/asuskb.git"
license = "MIT"
description = "A tool for changing asus laptop keyboard light level"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
which = "8.0.3"
